force-app/main/default/objects/Opp_Team_Member_by_Role__mdt/Opp_Team_Member_by_Role__mdt.object-meta.xml
<CustomObject>
    <description>Assign the Stewardship Opportunity Team member based on the Opportunity Primary Relationship Manager Role.

PRM Role &gt; Stewardship Opportunity Team Member
Regional Director &gt; Caitlin Olivier
CFR &gt; Sara Kassen
Gift Planning Officer &gt; Laura Walker</description>
    <label>Opp Team Member by Role</label>
    <pluralLabel>Opp Team Member by Roles</pluralLabel>
</CustomObject>