force-app/main/default/objects/Opp_Team_Member_by_Role__mdt/fields/PRM_Role__c.field-meta.xml
<CustomField>
    <fullName>PRM_Role__c</fullName>
    <label>PRM Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional Director</fullName>
                <default>true</default>
                <label>Regional Director</label>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>Gift Planning Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>