force-app/main/default/objects/Opp_Team_Member_by_Role__mdt/fields/Stewardship_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Stewardship_User_ID__c</fullName>
    <label>Stewardship User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>