force-app/main/default/objects/Opp_Team_Member_by_Role__mdt/fields/Storytelling_User_Alias__c.field-meta.xml
<CustomField>
    <fullName>Storytelling_User_Alias__c</fullName>
    <label>Storytelling User Alias</label>
    <length>18</length>
    <type>Text</type>
</CustomField>